--- a/detainment.html
+++ b/detainment.html
@@ -12,51 +12,53 @@
     <script type="text/javascript" src="js/ajax.js"></script>
     <style>
         .top{
-            width: 774px;
-            height: 303px;
+            width: 374px;
+            height: 203px;
             position: absolute;
-            top: 100px;
-            left: 238px;
+            top: 56px;
+            left: 138px;
         }
         .left{
-            width:214px;height:45px;
-            position:absolute;
-            top:511px;
-            left:300px;
+            width: 218px;
+            height: 50.5px;
+            position: absolute;
+            top: 311px;
+            left: 84px;
         }
         .right{
-            width:214px;height:45px;
-            position:absolute;
-            top:500px;
-            left:800px;
+            width: 218px;
+            height: 50.5px;
+            position: absolute;
+            top: 311px;
+            left: 396px;
         }
         .lefton{
-            width: 321px;
+            width: 221px;
             height: 67.5px;
-
-            top: 500px;
-            left: 150px;
+            top: 303px;
+            left: 50px;
         }
         .righton{
-            width:321px;
-            height:67.5px;
-            top:500px;
-            left:800px;
+            width: 221px;
+            height: 67.5px;
+            top: 303px;
+            left: 375px;
         }
     </style>
 </head>
 
 <body>
     <div class="wp detailhtml">
-        <img src="/epg/images/132.png" class="top"  id="top"   style="" />
-        <img src="/epg/images/jxgk.png" class="left lefton" id="left" style="" />
-        <img src="/epg/images/crlk.png" class="right" id="right" style="" />
+        <img src="/sdepg/images/132.png" class="top"  id="top"   style="" />
+        <img src="/sdepg/images/jxgk.png" class="left lefton" id="left" style="" />
+        <img src="/sdepg/images/crlk.png" class="right" id="right" style="" />
     </div>
 </body>
 <script>
     var mor = "left";
     // sessionStorage.setItem('flag', false);
     var jx = rep(getUrlParam("jx"), false);
+    var too = rep(getUrlParam("to"), false);
 
     //获取url中的参数
     function getUrlParam(name) {
@@ -96,7 +98,7 @@
         if (mor == "left") {
             window.location.href = jx;
         } else {
-            window.location.href = rep(getUrlParam("returnInfo"), false);
+            window.location.href = too;
             sessionStorage.removeItem('flag');
         }
     }
