--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <div id="show" class="">
-        <img src="images/showImg/dancer_1.jpg">
+        <img src="/sdepg/images/showImg/dancer_1.jpg">
     </div>
     <div id="kong" class="yinCang">系统故障 请联系管理员或者客服</div>
     <div id="gengduo" class="yinCang">暂无更多推荐</div>
