--- a/video.html
+++ b/video.html
@@ -8,8 +8,8 @@
     <script type="" src="js/href.js"></script>
     <title>视频播放</title>
     <script>
-        // var playUrl = "http://202.99.114.74:57301/sd/2.ts";
-        var playUrl = "";
+        var playUrl = "rtsp://202.99.114.74:57301/sd/2.ts";
+        // var playUrl = "";
         var speed = 1;
         var mediaStr = '[{mediaUrl:"' + playUrl + '",';
         mediaStr += 'mediaCode: "jsoncode1",';
